add support for different chains